Added "Alt" to Image
Added the "Alt" to the image (Comment).

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <li>Music</li>
 </ul>
 
-<img src="img/me.jpg" height="300px" width="400px">
+<img src="img/me.jpg" alt="Kier'n Harris" height="300px" width="400px">
 
 </body>
 </html>
