--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Kier'n Harris</title>
 
+        <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+        <link rel="manifest" href="img/favicons/site.webmanifest">
+        <link rel="mask-icon" href="img/favicons/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+    
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">     
 <link rel="stylesheet" href="css/styles.css">
 
 </head>
@@ -13,13 +22,21 @@
     
 <h1>Kier'n Harris</h1>
 
+<img src="img/me.jpg" alt="Kier'n Harris" height="300px" width="400px">
+
 <ul>
     <li>Huskies</li>
     <li>Video Games</li>
     <li>Music</li>
 </ul>
 
-<img src="img/me.jpg" alt="Kier'n Harris" height="300px" width="400px">
+<video controls>
+
+    <source src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-720p.mp4" type="video/mp4">
+
+</video>
+
+    <script src="js/scripts.js"></script>
 
 </body>
 </html>
