Adding in my signature

--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
   
   <main>
   
+    <style>
+      @import url('https://fonts.googleapis.com/css?family=Work+Sans');
+      </style> 
+      
+      <nav>
+        <div class="signature">
+          <img src="./img/signature.png" alt="signature">
+        </div>
+        
+        </nav>
+
     <header>
       <h1>Kier'n Harris</h1>  
     </header>
