--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="nav">
     <ul>
       <li>
-        <a id="nav-toggle" href="#" onclick="return false;"><span>&#9776</span></a>
+        <a id="nav-toggle" href="#" onclick="return true;"><span>&#9776</span></a>
       </li>
       <li class="nav-item">
         <a href="index.html">Home</a>
@@ -33,7 +33,7 @@
       </li>
     </ul>
   </div>
-  <a id="navicon" href="#" onclick="return false;"><span>&#9776</span></a>
+  <a id="navicon" href="#" onclick="return true;"><span>&#9776</span></a>
   <div id="container">
     <div class="banner">
       <h1 id="header-text">Kier'n Harris</h1>
@@ -96,11 +96,10 @@
     </svg>
 
 <!-- My Scripts -->
-  <script src="js/scripts.js"></script>
+  <script src="/js/scripts.js"></script>
 <!-- JS Libraries-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>
-
 </body>
 </html>
 
