Added About Me and My Work Page

--- a/aboutme.html
+++ b/aboutme.html
@@ -1,79 +1,45 @@
-<body>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"> 
-    <link href='https://fonts.googleapis.com/css?family=Shadows+Into+Light|Raleway' rel='stylesheet' type='text/css'>
-  
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Favorite Quote</title>
+
     <!-- CSS -->
     <link rel="stylesheet" href="/css/aboutme.css">
+  </head>
+<body>
+    
+    <div class="nav">
+        <ul>
+          <li>
+            <a id="nav-toggle" href="#" onclick="return true;"><span>&#9776</span></a>
+          </li>
+          <li class="nav-item">
+            <a href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="aboutme.html">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a href="mywork.html">My Work</a>
+          </li>
+          <li class="nav-item">
+            <a href="favoritequote.html">Favorite Quote</a>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html">Contact</a>
+          </li>
+        </ul>
+      </div>
 
     <main>
 
-        <div class="nav">
-            <ul>
-              <li>
-                <a id="nav-toggle" href="#" onclick="return true;"><span>&#9776</span></a>
-              </li>
-              <li class="nav-item">
-                <a href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a href="aboutme.html">About Me</a>
-              </li>
-              <li class="nav-item">
-                <a href="mywork.html">My Work</a>
-              </li>
-              <li class="nav-item">
-                <a href="favoritequote.html">Favorite Quote</a>
-              </li>
-              <li class="nav-item">
-                <a href="contact.html">Contact</a>
-              </li>
-            </ul>
-          </div>
 
-    <p class="masthead-intro">Hi, I'm</p> 
-          <h1 class="masthead-heading">Kier'n Harris</h1>
-      </header>
-    
-  <!-- About me -->
 
-  <section class="introduction">
-    <div class="starcontainer">
-      <h2>About me</h2>
-      <i class="fa star fa-2x"></i>
-      <hr class="star"></hr>
-    </div>
-      <p>I am a Front End developer who believes in making the internet a better place. I currently work at Picspotr as a Web Developer/Design intern, Vice President of LatinosinHigherEd, and a freelancer in The Greater New Haven Area. Yes I wear many hats. </p>
-  
-      <p>It is my passion to conceptualize, develop, and deploy ideas to this great environment we call the internet. I am an advocate for Higher Education advancement and when I set my goals I sink my teeth into them. </p>
-  </section>
-  
-  <section class="location">
-      <h1>Where I’m From</h1>
-      <p>I was born in the Bronx raised in Spanish Harlem and currently reside in Naugatuck CT.</p>
-  </section>
-  
-  <section class="questions">
-      <h1>More About Me</h1>
-        <h2>What is important to you?</h2>
-         <p>Aside from my family education is extremely important to me and has always been a huge component of my growth.</p>
-        <h2>What are your favorite hobbies?</h2>
-         <p>I enjoy playing Ice Hockey. I'm a huge wrestling fan and love attending Wrestle Mania. I also enjoy trying new Vegan foods and traveling.</p>
-        <h2>What is your dream job?</h2>
-         <p>I'd love to take my new freelance career and turn it into a fullt-time gig.</p>
-        <h2>What music have you been listening to lately?</h2>
-         <p>I've been listening to the Focus playlist on Spotify.</p>
-  </section>
- </main>
+<!-- JS -->
+<script src="/aboutme.js"></script>
 
-  <!-- Footer -->
-  
-  <footer class="content-footer">
-    <p>Want to see some of my work?</p>
-      <ul class="social">
-        <li><a href="https://github.com/"><i class="fa fa-github-square fa-3x"></i></a></li>
-        <li><a href="https://codepen.io/"><i class="fa fa-codepen fa-3x"></i></a></li>
-        <li><a href="https://www.linkedin.com/profile/"><i class="fa fa-linkedin-square fa-3x"></i></a></li>
-  </footer>
-
-  </body>
-  
+    </main>    
+</body>
+</html>
