--- a/favoritequote.html
+++ b/favoritequote.html
@@ -6,7 +6,7 @@
     <title>Favorite Quote</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/favoritequote.css">
+    <link rel="stylesheet" href="/css/favoritequote.css">
     <link href="https://fonts.googleapis.com/css?family=Merienda&display=swap" rel="stylesheet"> 
 </head>
 <body>
@@ -42,7 +42,7 @@
         <h2>--Shakespeare</h2>
 
 <!-- JS -->
-<script src="/favoritequote.js"></script>
+<script src="/js/favoritequote.js"></script>
 
     </main>    
 </body>
