--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <title>Contact Form</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/contact.css">
+    <link rel="stylesheet" href="/css/contact.css">
 </head>
 <body>
 
@@ -70,7 +70,7 @@
             </form>
     </div> 
             <!-- JS -->
-            <script src="/contact.js"></script>
+            <script src="/js/contact.js"></script>
     
 </body>
 </html>
