--- a/mywork.html
+++ b/mywork.html
@@ -1,45 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Favorite Quote</title>
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="/css/mywork.css">
-  </head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My Work</title>
+  <link href="/css/mywork.css" rel="stylesheet">
+  <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+  <link rel="manifest" href="favicons/site.webmanifest">
+  <link rel="mask-icon" href="favicons/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Raleway:400,700,300' rel='stylesheet' type='text/css'>
+</head>
 <body>
-    
-    <div class="nav">
-        <ul>
-          <li>
-            <a id="nav-toggle" href="#" onclick="return true;"><span>&#9776</span></a>
-          </li>
-          <li class="nav-item">
-            <a href="index.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="aboutme.html">About Me</a>
-          </li>
-          <li class="nav-item">
-            <a href="mywork.html">My Work</a>
-          </li>
-          <li class="nav-item">
-            <a href="favoritequote.html">Favorite Quote</a>
-          </li>
-          <li class="nav-item">
-            <a href="contact.html">Contact</a>
-          </li>
-        </ul>
+
+  <div class="nav">
+    <ul>
+      <li>
+        <a id="nav-toggle" href="#" onclick="return true;"><span>&#9776</span></a>
+      </li>
+      <li class="nav-item">
+        <a href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a href="aboutme.html">About Me</a>
+      </li>
+      <li class="nav-item">
+        <a href="mywork.html">My Work</a>
+      </li>
+      <li class="nav-item">
+        <a href="favoritequote.html">Favorite Quote</a>
+      </li>
+      <li class="nav-item">
+        <a href="contact.html">Contact</a>
+      </li>
+    </ul>
+  </div>
+  <a id="navicon" href="#" onclick="return true;"><span>&#9776</span></a>
+  <div id="container">
+    <div class="banner">
+      <h1 id="header-text">My Work</h1>
+    </div>
+  
+      
+    <div id="gallery">
+      <h1 id="gallery-header">Gallery</h1>
+      <div id="img-box">
+        <a href="https://kharris27.github.io/movie-trailer/">
+        <img class="image" id="img1" src="/img/MovieTrailer.png" alt="Kier'n Harris">
+      </a>
       </div>
+      <div id="img-box">
+        <img class="image" id="img1" src="/img/PhenomenologySticker.jpg" alt="Kier'n Harris">
+      </div>
+      <div id="img-box">
+        <img class="image" id="img1" src="/img/BookCover.jpg" alt="Kier'n Harris">
+      </div>
+    </div>
+  </div>
 
-    <main>
-
-
-
-<!-- JS -->
-<script src="/js/mywork.js"></script>
-
-    </main>    
+<!-- My Scripts -->
+  <script src="/js/mywork.js"></script>
+<!-- JS Libraries-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/6.1.19/browser.min.js"></script>
 </body>
 </html>
+
